Closed Bug 1790079 Opened 3 years ago Closed 3 years ago

Crash in [@ XrandrSoftwareVsyncSource::ComputeVsyncRate]

Categories

(Core :: Graphics, defect)

Unspecified
Linux
defect

Tracking

()

RESOLVED FIXED
107 Branch
Tracking Status
firefox-esr102 --- wontfix
firefox105 --- wontfix
firefox106 --- wontfix
firefox107 --- fixed

People

(Reporter: sefeng211, Assigned: gsvelto)

References

(Blocks 1 open bug)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/b36504bc-cb10-4c38-a815-e73480220909

Reason: SIGSEGV / SEGV_MAPERR

Top 10 frames of crashing thread:

0 libxul.so XrandrSoftwareVsyncSource::ComputeVsyncRate gfx/thebes/gfxPlatformGtk.cpp:900
1 libxul.so XrandrSoftwareVsyncSource::monitors_changed gfx/thebes/gfxPlatformGtk.cpp:923
2 libgobject-2.0.so.0 g_closure_invoke gobject/gclosure.c:830
3 libgobject-2.0.so.0 signal_emit_unlocked_R gobject/gsignal.c:3743
4 libgobject-2.0.so.0 g_signal_emit_valist gobject/gsignal.c:3496
5 libgobject-2.0.so.0 g_signal_emit_by_name gobject/gsignal.c:3595
6 libgdk-3.so.0 _gdk_x11_screen_size_changed /build/gtk+3.0-WfzL5N/gtk+3.0-3.24.33/gdk/x11/gdkscreen-x11.c:1228
7 libgdk-3.so.0 gdk_x11_display_translate_event.lto_priv.0 /build/gtk+3.0-WfzL5N/gtk+3.0-3.24.33/gdk/x11/gdkdisplay-x11.c:1201
8 libgdk-3.so.0 _gdk_x11_event_translator_translate /build/gtk+3.0-WfzL5N/gtk+3.0-3.24.33/gdk/x11/gdkeventtranslator.c:51
9 libgdk-3.so.0 _gdk_x11_display_queue_events /build/gtk+3.0-WfzL5N/gtk+3.0-3.24.33/gdk/x11/gdkeventsource.c:341

The crash seems to be in our code, so unless there's something I'm missing, this bug doesn't belong in External Software Affecting Firefox. Feel free to move it back if I'm wrong about that.

Component: Other → Graphics
Product: External Software Affecting Firefox → Core
Blocks: wr-linux
OS: Unspecified → Linux

Yep, the crash is happening here. outputInfo can be NULL if XRRGetOutputInfo() fails.

Actually there's a lot of return values there that need to be NULL-checked before use, not just that one.

Assignee: nobody → gsvelto
Status: NEW → ASSIGNED
Pushed by gsvelto@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/e209a5b90a93 NULL-check the values returned by RandR queries before using them r=jgilbert
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 107 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: