Bug 1790079 - NULL-check the values returned by RandR queries before using them r=jgilbert

Differential Revision: https://phabricator.services.mozilla.com/D158005